--- a/myCV.html
+++ b/myCV.html
@@ -1,1 +1,103 @@
+<html>
+<head> 
+	<title> CV Me</title>
+</head>
+<body bgcolor="white" width="900px"> 
+	<div align="center">
+	
+	<table width="1000px" border="0" bgcolor="FFFFE0">
+		<tr>
+			<td width="250px" bgcolor="FFFACD">
+				<div style="margin-left:15px"> <p><h3> </br> Muhammad Mushlikh </h3> </p></div>
+				<div style="margin-left:15px"> <img src="me.jpg" width="210px" height="250px" align="center" style="border:2px solid #000"> </div>
+				<div style="margin-left:15px"> </br><b> Phone : </b></br> 085742068048 </div>
+				<div style="margin-left:15px"> </br><b> Email : </b></br> <a href="http://www.emush1994@gmail.com"> emush1994@gmail.com </a> </div>
+				<div style="margin-left:15px"> </br><b> Blog : </b></br> <a href="http://www.mmushlikh.student.telkomuniversity.ac.id"> mmushlikh's blog </a></div>
+				<div style="margin-left:15px"> </br><b> Address : </b></br> Jl. Sukabirus </div>
+				<div style="margin-left:15px"> </br><b> Birthdate : </b></br> 19 Desember 1994 </div>
+				<div style="margin-left:15px"> </br><b> Religion : </b></br> Islam </div>
+			</td>
+			<td width="750px">
+				<div style="text-align:center"> <h1> <font color="FFD700"> Curiculum Vitae </font> </h1> </div>
+				<div style="margin-left:50px"> <b> </br> <h3> Formal Education : </h3> </b>
+					<table width="650px" bgcolor="FFF8DC" style="border:2 solid #FFF" bordercolor="white" >
+						<tr>
+							<td width="200px"> Higher Education </td>
+							<td> : Universitas Telkom </td>
+						</tr>
+						<tr>
+							<td width="200px"> Senior High School </td>
+							<td> : SMK Telkom Sandhy Putra Purwokerto</td>
+						</tr>
+						<tr>
+							<td width="200px"> Junior High School </td>
+							<td> : SMP Negeri 1 Tegal</td>
+						</tr>
+						<tr>
+							<td width="200px"> Elementary School </td>
+							<td> : SD Negeri Kejambon 2 Tegal </td>
+						</tr>
+					</table>
+				</div>
+				<div style="margin-left:50px"> <b> <h3> Commite and Organization Experience : </h3> </b>
+					<table width="650px" bgcolor="F5DEB3" style="border:2 solid #FFF" bordercolor="white" >
+						<tr>
+							<td width="200px"> 2010 Mathematic Club </td>
+							<td> : Member </td>
+						</tr>
+						<tr>
+							<td width="200px"> 2012 Iwakmas </td>
+							<td> : Member </td>
+						</tr>
+						<tr>
+							<td width="200px"> 2012 Tryout Telkom </td>
+							<td> : Divisi Humas </td>
+						</tr>
+						<tr>
+							<td width="200px"> 2013 Mobile Comm Lab. </td>
+							<td> : Study Group Member</td>
+						</tr>
+						<tr>
+							<td width="200px"> 2014 Al-Fath </td>
+							<td> : Member </td>
+						</tr>
+						<tr>
+							<td width="200px"> 2014 Informatic Laboratory </td>
+							<td> : Asisten Praktikum </td>
+						</tr>
+						<tr>
+							<td width="200px"> 2015 Informatic Laboratory </td>
+							<td> : Asisten Praktikum </td>
+						</tr>
 
+					</table>
+				</div>
+				<div style="margin-left:50px"> <b> <h3> Strength and Weakness : </h3> </b>
+					<table width="650px" bgcolor="FFF8DC" style="border:2 solid #FFF" bordercolor="white" >
+						<tr>
+							<td width="200px"> Strength : </br>
+								<ul type="circle">
+									<li> Cepat belajar </li>
+									<li> Mudah menyesuaikan diri </li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td width="200px"> Weakness : </br>
+								<ul type="circle">
+									<li> Pendirian kuat </li>
+									<li> Mudah Termotivasi </li>
+								</ul>
+							</td>
+						</tr>
+						
+					</table>
+				</div>
+
+			</td>
+		</tr>
+	</table>
+	<p> <a href="index.html"> Index </a> </p>
+	</div>
+</body>
+</html>
